--- a/src/app/pages/reactive/reactive.component.html
+++ b/src/app/pages/reactive/reactive.component.html
@@ -34,7 +34,49 @@
         </div>
     </div>
 
+    <div class="form-group row" formGroupName="direccion">
+        <label class="col-2 col-form-label">Distrito</label>
+        <div class="form-row col-8">
+            <div class="col">
+                <input type="text" class="form-control" placeholder="Distrito" formControlName="distrito">
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" placeholder="Ciudad" formControlName="ciudad">
+            </div>
+        </div>
+    </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <table class="table">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>ID</th>
+                            <th>Pasatiempo</th>
+                            <th>Borrar</th>
+                        </tr>
+                    </thead>
+                    <tbody formArrayName="pasatiempos">
+                        <tr *ngFor="let control of pasatiempos.controls; let i = index">
+                            <td>{{i + 1}}</td>
+                            <td>
+                                <input type="text" class="form-control" [formControlName]="i">
+                            </td>
+                            <td>
+                                <button class="btn btn-danger" type="button" (click)="borrarPasatiempo(i)"> Borrar </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <button class="btn btn-primary mt-3 mb-5 btn-block" type="button" (click)="agregarPasatiempo()">
+                + Agregar
+            </button>
+
+            </div>
+        </div>
+    </div>
 
     <div class="form-group row">
         <label class="col-2 col-form-label">&nbsp;</label>
