--- a/src/app/pages/reactive/reactive.component.html
+++ b/src/app/pages/reactive/reactive.component.html
@@ -34,6 +34,29 @@
         </div>
     </div>
 
+    <div class="form-group row">
+        <label class="col-2 col-form-label">Usuario</label>
+        <div class="col-8">
+
+            <input class="form-control" type="text" placeholder="Nombre de Usuario" formControlName="usuario" [class.is-invalid]="usuarioNoValido">
+            <small *ngIf="usuarioNoValido" class="text-danger"> Ese nombre de usuario ya fue tomado </small>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-2 col-form-label">Contraseña</label>
+        <div class="col-8">
+            <input class="form-control" type="password" placeholder="Contraseña" formControlName="pass1" [class.is-invalid]="pass1NoValido">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-2 col-form-label">Repita</label>
+        <div class="col-8">
+            <input class="form-control" type="password" placeholder="Repita Contraseña" formControlName="pass2" [class.is-invalid]="pass2NoValido">
+        </div>
+    </div>
+
     <div class="form-group row" formGroupName="direccion">
         <label class="col-2 col-form-label">Distrito</label>
         <div class="form-row col-8">
